--- a/.github/ISSUE_TEMPLATE/beta.yml
+++ b/.github/ISSUE_TEMPLATE/beta.yml
@@ -6,3 +6,6 @@ body:
   - type: markdown
     attributes:
       value: Issue will be moved to another repo
+ - type: label
+   attributes:
+    value: What's the issue?
